--- a/default.css
+++ b/default.css
@@ -289,7 +289,7 @@
 	{
 		position: relative;
 		padding: 5em 0em 7em 0em;
-		background: #111111 url(images/header-bg.jpg) no-repeat center;
+		background: #111111 url(images/header-bg.png) no-repeat center;
 		background-size: cover;
 	}
 
